<resources>
    <string name="app_name">Just Do</string>
    <string name="list">Task list</string>
    <string name="add">Add</string>
    <string name="statistic">Statistic</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_tasks_text">У вас нет заданий на сегодня</string>
    <string name="add_task_recomend">Добавьте первое задание, чтобы скорее приступить к его выполнению</string>
    <string name="current_tasks">Текущие задания</string>
    <string name="my_productivity">Моя продуктивность</string>
    <string name="add_task">Добавить задание</string>
    <string name="choose_category">Выберите категорию</string>
    <string name="add_category">Добавьте категорию</string>
    <string name="enter_category_name">Введите название</string>
    <string name="add_category_icon">Выберите иконку</string>
    <string name="add_category_color">Выберите цвет</string>
    <string name="ok">Ok</string>

    <string name="sport">Спорт</string>
    <string name="house">Дом</string>
    <string name="celebration">Праздник</string>
    <string name="health">Здоровье</string>
    <string name="meeting">Встреча</string>
    <string name="coffee">Перерыв</string>
    <string name="study">Учеба</string>
    <string name="food">Еда</string>
    <string name="sleeping">Сон</string>
    <string name="shopping">Покупки</string>
    <string name="chill">Отдых</string>
    <string name="reading">Чтение</string>
    <string name="finance">Финансы</string>
    <string name="walking">Прогулка</string>
    <string name="drive">Поездка</string>

    <string name="new_task">Новая задача</string>
    <string name="mode_and_time">Режим и время</string>
    <string name="choose_mode">Выберите режим</string>
    <string name="text_interval">интервал</string>
    <string name="text_timer">таймер</string>
    <string name="text_precise_time">точное время</string>
    <string name="text_start">начало</string>
    <string name="text_end">конец</string>
    <string name="text_date">Дата</string>
    <string name="text_ok">Ok</string>
    <string name="text_cancel">Отмена</string>
    <string name="text_duration">Длительность</string>
    <string name="text_precise">Время</string>
</resources>