<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.task.addTask.AddTaskFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_new_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="2"
        tools:listitem="@layout/item_task_oneline" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="@color/ultra_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_new_tasks">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/task_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_task"
            android:textColorHint="@color/main_green"
            app:endIconDrawable="@drawable/ic_add_24"
            app:endIconMode="custom"
            app:endIconTint="@color/main_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_new_tasks"
            app:startIconDrawable="@drawable/ic_icon_list">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_task_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/ultra_light_grey"
        app:layout_constraintTop_toBottomOf="@+id/card_task_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/time_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_icon_timer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_mode_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mode_and_time"
                android:textColor="@color/main_green"
                app:layout_constraintStart_toEndOf="@+id/time_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:text="@string/text_interval"
                android:textColor="@color/main_green"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/text_timer"
                app:layout_constraintStart_toEndOf="@+id/time_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_mode_time" />

            <TextView
                android:id="@+id/text_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:text="@string/text_timer"
                android:textColor="@color/main_green_light"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/text_precise_time"
                app:layout_constraintStart_toEndOf="@+id/text_interval"
                app:layout_constraintTop_toBottomOf="@+id/text_mode_time" />

            <TextView
                android:id="@+id/text_precise_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:text="@string/text_precise_time"
                android:textColor="@color/main_green_light"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_timer"
                app:layout_constraintTop_toBottomOf="@+id/text_mode_time" />

            <TextView
                android:id="@+id/text_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_start"
                android:textColor="@color/main_green"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/text_interval"
                app:layout_constraintTop_toBottomOf="@+id/text_interval" />

            <TextView
                android:id="@+id/time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/text_start"
                app:layout_constraintTop_toBottomOf="@+id/text_interval"
                tools:text="@tools:sample/date/hhmmss" />

            <TextView
                android:id="@+id/text_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_end"
                android:textColor="@color/main_green"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/text_start"
                app:layout_constraintTop_toBottomOf="@+id/text_start" />

            <TextView
                android:id="@+id/time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/text_end"
                app:layout_constraintTop_toBottomOf="@+id/text_start"
                tools:text="@tools:sample/date/hhmmss" />

            <TextView
                android:id="@+id/text_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_duration"
                android:textColor="@color/main_green"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/text_interval"
                app:layout_constraintTop_toBottomOf="@+id/text_interval" />

            <TextView
                android:id="@+id/time_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/text_duration"
                app:layout_constraintTop_toBottomOf="@+id/text_start"
                tools:text="@tools:sample/date/hhmmss" />

            <TextView
                android:id="@+id/text_precise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_precise"
                android:textColor="@color/main_green"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/text_interval"
                app:layout_constraintTop_toBottomOf="@+id/text_interval" />

            <TextView
                android:id="@+id/time_precise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/text_precise"
                app:layout_constraintTop_toBottomOf="@+id/text_interval"
                tools:text="@tools:sample/date/hhmmss" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/ultra_light_grey"
        app:layout_constraintTop_toBottomOf="@+id/card_task_mode">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/calendar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_icon_calendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_date"
                android:textColor="@color/main_green"
                app:layout_constraintStart_toEndOf="@+id/calendar_icon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/text_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:text="@string/text_cancel"
        app:layout_constraintEnd_toStartOf="@id/text_ok"
        app:layout_constraintTop_toBottomOf="@+id/card_date" />

    <TextView
        android:id="@+id/text_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:text="@string/text_ok"
        android:textColor="@color/main_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_date" />


</androidx.constraintlayout.widget.ConstraintLayout>